static/pinax/css/base.css
/* GENERAL */

html, body {
    height: 100%;
}
body {
    background-color: #FFF;
    margin: 0;
    color: #333;
    font-family: "Helvetica Neue", Arial, sans-serif;
    font-size: 10pt;
}
a {
    color: #00B000;
}

a:visited {
    color: #95de95;
}

a:hover {
    color: #00B000;
    text-decoration: none;
}


img {
    border: 0;
}
dt {
    font-weight: bold;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
    border: 0;
    font-size: inherit;
}
td {
    margin: 0;
    border: 0;
    padding: 0;
}

#body {
    clear: both;
    margin: 0 3.332;
    padding: 10px;
}

.auth-prompt, footer {
  border-top: 1px solid #ccc;
  clear: both;
  padding: 12px 0;
}

.home .homepage-block h2 img {
  vertical-align: top;
}

/* CLEARS */

.clearboth {
    clear: both;
}

/* reference:
 *   http://www.positioniseverything.net/easyclearing.html
 *   http://www.zeldman.com/2006/10/27/ie7fixes1/
 *      comment by michael on 10/28/2006
 */
.clearfix {
    min-height: 1%;
}

.clearfix:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden;
}

/* hides from ie5-mac \*/
* html .clearfix { height: 1%; }
/* end hide from ie5-mac */


/* HEADER */

#tabhead {
    background: #000;
    border-bottom: 1px solid #000; /* tab border */
    position: relative;
}
#tabhead .logo {
    height: 60px;
    padding-left: 5px;
    padding-top: 0;
}
#tabhead .logo img {
/*    width: 190px;*/
/*    height: 79px;*/
}
#tabhead .login {
    position: absolute;
    top: 6px;
    right: 15px;
    color: #F4C021; /* login bar text colour */
}
#tabhead .login a, #tabhead .login a:visited {
    color: #F4C021; /* login bar link colour */
}
#tabhead .login a:hover {
    color: #FFF; /* login bar link hover colour */
}

.toolbox {
    background-color: #F4C021;
    margin-bottom: 20px;
    padding: 8px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    -moz-box-shadow: black 0px 1px 2px;
    -webkit-box-shadow: black 0px 2px 2px;
    box-shadow: black 0px 2px 2px;
}

.toolbox h2 {
    margin: 0 0 5px;
    padding: 0;
}

.toolbox a {
    color: #0B0;
}

.toolbox ul li {
    background: none repeat scroll 0 0 #FFFFFF;
    margin: 2px 0;
    padding: 2px 4px;
}

.toolbox ul {
    list-style: none outside none;
    margin: 0;
    padding: 0;
}

#locale_switcher {
    display: inline;
}

#subnav {
    margin: 0;
    padding: 0;
    background: #00B000; /* tab colour */
    border-bottom: 1px solid #9BC;
}
#subnav ul {
    float: right;
    margin: 0 20px;
    padding: 0;
}
#subnav ul li {
    display: inline;
    list-style-type: none;
}
#subnav ul a:link, #subnav ul a:visited {
    float: left;
    font-weight: bold;
    text-decoration: none;
    color: #000;
    padding: 4px 20px;
}
#subnav ul a:hover {
    color: #FFF;
    background: #007C00;
}


/* FORMS */

form th {
    text-align : left;
}
form.signup input[type="submit"], form.login input[type="submit"] {
    margin: 20px 0;
    font-size: 14pt;
}
input[type="text"], input[type="password"], textarea {
    padding: 3px;
    margin: 3px;
    border: solid 1px #C6C6C6;
    border-bottom: solid 1px #E3E3E3;
    color: #666;
    font-size: 12pt;
    background: #F3F3F3 url('../img/form-shadow.png') left top repeat-x;
}
ul.errorlist {
    margin: 0;
    padding: 0;
    list-style: none;
    color: red;
}


/* MESSAGES */

ul#messages {
    margin: 0 0 10px 0;
    padding: 0;
    list-style: none;
}
ul#messages li {
    padding: 5px 10px;
    margin: 3px;
}
ul#messages li a {
    float: right;
    color: #693;
}
ul#messages .debug {
    background: #EEE;
    border: 1px solid #BBB;
}
ul#messages .info {
    background: #DEF;
    border: 1px solid #9BC;
}
ul#messages .success {
    background: #EFD;
    border: 1px solid #BC9;
}
ul#messages .warning {
    background: #FED;
    border: 1px solid #CB9;
}
ul#messages .error {
    background: #FDD;
    border: 1px solid #C99;
}


/* WHAT NEXT */

dl.what_next {
    margin: 2em;
}
dl.what_next dt {
    font-size: 120%;
}
dl.what_next dd {
    margin: 0 0 1em 0;
    font-style: italic;
}
p.what_next {
    font-size: 120%;
}


/* FORM TOGGLE */

.form-toggle p {
    margin-bottom: 2px;
}

.form-toggle p span {
    background: #DEF;
    padding: 3px 6px;
    border-top: 1px solid #9BC;
    border-left: 1px solid #9BC;
    border-right: 1px solid #9BC;
    cursor: pointer;
}

.form-toggle form {
    padding: 3px 6px;
    margin: 0;
    background: #DEF;
    border: 1px solid #9BC;
}



/* EXTRAS TO CLEAN UP */

.warning {
    color: red;
    font-weight: bold;
}

div.profile_info p {
    margin: 0;
}
div.left_panel {
    width: 550px;
}
div.right_panel {
    margin-top: 20px;
    width: 200px;
    float: right;
    z-index: 999;
}

label {
    display: block;
}

.latest-comment-entry {
    padding: 6px 0px 6px;
    border-bottom: 1px solid silver;
    clear: both;
}

.latest-comment-entry.last, .tweet.last {
    border-bottom: none;
}

.comment-blurb {
    margin: 4px 0px;
}

.comment-blurb-date {
    color: #999999;
    font-size: 80%;
}

.clear {
    clear: both;
}

.home h2 {
    font-size: 14px;
    color: #777;
    margin-top: 0;
    margin-bottom: 4px;
}

.home #body {
  padding: 10px 0;
}

.tweet-item {
    padding: 6px 0px;
}

#homepage-tweet-form {
/*  background-color: #ccc;*/
}

#homepage-tweet-form input {
    margin: 0;
    font-size: 10pt;
    display: inline;
}

#homepage-tweet-form #new_tweet {
  width: 70%;
  margin-right: 1%;
}

#homepage-tweet-form input[type=submit] {
  width: 22%;
}

#homepage-tweet-form #chars_hint {
    font-size: 10pt;
    display: block;
}

.homepage-photo {
  width: 48%;
  margin-bottom: 6px;
  margin-right: 1%;
}

#id_tease {
    height: 5em;
}

.blog-post {
    font-size: 16px;
    line-height: 24px;
}

.blog-post h1 {
    margin-top: 48px;
    margin-bottom: 48px;
    font-size: 48px;
}

.blog-post h4 {
  margin-top: 12px;
  margin-bottom: 12px;
}

.blog-post-tease {
  font-size: 12px;
}

p {
    margin-bottom: 24px;
    margin-top: 24px;
}

.blog-post .blog-post-tease p {
  font-size: 14px;
  margin-top: 0px;
  margin-bottom: 12px;
}

.blog-post .highlight pre {
    padding: 24px;
    background-color: #000;
    border: none;
    color: #f8f8f2;
    font-size: 16px;
}

.blog-post .literal {
   background-color: #F7F6F4;
}

.blog-post blockquote {
   padding-left: 1em;
   border-left: 3px solid #F7F6F4;
   font-style: italic;
}

.blog-post img {
   border: 1px solid #ddd;
}

.bare-list {
  list-style: none;
  padding: 0;
}

#profile_avatar {
  float: left;
  margin-right: 24px;
}

.profile h2 {
  margin-top: 24px;
  margin-bottom: 0px;
}

.login.uniForm .inlineLabels .textInput {
    width: auto;
}

.audiotracks-detail {
    margin-bottom: 48px;
}

#tag-cloud {
  padding: 0;
}

#tag-cloud li {
    display: inline;
}

.tag-size-1 {
    font-size: 12px;
}
.tag-size-2 {
    font-size: 18px;
}
.tag-size-3 {
    font-size: 24px;
}
.tag-size-4 {
    font-size: 28px;
}
.tag-size-5 {
    font-size: 34px;
}
.tag-size- {
    font-size: 40px;
}

.border-shadow {
    -moz-box-shadow: black 0px 1px 2px;
    -webkit-box-shadow: black 0px 2px 2px;
}

.round-border {
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
}

.inline-avatar {
    /* float: left; */
    margin-right: 4px;
    padding: 0;
    height: 24px;
}

.homepage-block {
    float: left;
    margin: 0;
    border-width: 0;
    width: 400px;
}

.homepage-item {
    padding: 4px 0;
}

.inline-avatar img {
   width: 24px;
   height: 24px;
}

